<resources>
    <string name="password">Password</string>
    <string name="name">Username</string>
    <string name="Saludo">Hello World</string>
    <string name="loginText">Login</string>
    <string name="LoginFail">Username or Password is Incorrect</string>
    <string name="LoginSucces">Logged in</string>
    <string name="startLogo">Cartoon network logo</string>
    <string name="app_name">Cartoon Network</string>
    <string name="item_home">Home</string>
    <string name="item_about">About</string>
    <string name="item_logout">Logout</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="Texto1">¡Your channel to have fun with your favorite characters!</string>
    <string name="ciegos">scroll</string>
    <string name="info_pro">Programer Name: Pablo Echevarria</string>
    <string name="info_pro2">He works from home</string>
    <string name="mail">Email: pablo@gmail.com</string>
    <string name="phone">Phone: 2954-253051</string>
    <string name="info_pro_header">Programer Information</string>
    <string name="Texto2">We are the channel that brings happines to the children</string>
    <string name="Texto3">We are always planning on getting new series and doing interesting stuff</string>
    <string name="many_try">"Too many trys, wait "</string>
    <string name="seconds">" seconds"</string>
</resources>