<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="contentDescription">

    <Button
        android:id="@+id/BTN_ABOUT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:backgroundTint="#00FFFFFF"
        android:insetTop="0dp"
        android:text="@string/item_about"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ciegos"
        android:isScrollContainer="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_cartoon"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.454"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/cn_completo_foreground" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/adamina"
                android:text="@string/Texto1"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/img_cartoon"
                tools:layout_editor_absoluteY="234dp" />

            <ImageView
                android:id="@+id/img_drama"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:srcCompat="@drawable/pepe1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:text="@string/Texto2"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/img_gumball"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:srcCompat="@drawable/cosa2" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adamina"
                android:text="@string/Texto3"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/img_powerpuff"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:srcCompat="@drawable/cosa" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>